# amiwm-upstream

amiwm/: INSTALL  Makefile.in  README  alloc.h  amiwm.1  client.c  client.h  configure  configure.in  diskobject.c  drawinfo.c  drawinfo.h  executecmd.c  frame.c  gram.y  icc.c  icc.h  icon.c  icon.h  kbdlexer.l  kbdmodule.y  launchermodule.c  lex.l  main.c  menu.c  module.c  module.h  ppmtoinfo.c  prefs.h  rc.c  requestchoice.c  screen.c  screen.h  system.amiwmrc  version.h
amiwm/libami/: Makefile.in  drawinfo.c  error.c  hotkey.c  iconlib.c  libami.h  lists.c  mdscreen.c  module.c  readargs.c
